--- a/WiFiDirectTests2/app/src/main/res/layout/activity_main.xml
+++ b/WiFiDirectTests2/app/src/main/res/layout/activity_main.xml
@@ -30,47 +30,17 @@
         android:layout_width="match_parent"
         android:layout_height="370dp"
         android:layout_marginTop="@dimen/cardview_compat_inset_shadow"
-        app:layout_constraintTop_toBottomOf="@+id/spacer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_request_permissions" />
-
-    <Button
-        android:id="@+id/btn_request_permissions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/request_permissions"
-        app:layout_constraintBottom_toTopOf="@id/btn_delete_all_wifi_groups"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_start_discovery"/>
+        app:layout_constraintTop_toBottomOf="@+id/spacer" />
 
     <Button
         android:id="@+id/btn_start_discovery"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/start_discovering_devices"
-        app:layout_constraintBottom_toTopOf="@id/btn_delete_all_wifi_groups"
-        app:layout_constraintStart_toEndOf="@id/btn_request_permissions"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Button
-        android:id="@+id/btn_delete_all_wifi_groups"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/delete_wifi_groups"
-        app:layout_constraintTop_toBottomOf="@id/list_discovered_devices"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_list_all_wifi_groups"/>
-
-    <Button
-        android:id="@+id/btn_list_all_wifi_groups"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/list_wifi_groups"
-        app:layout_constraintTop_toBottomOf="@id/list_discovered_devices"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btn_delete_all_wifi_groups"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
